--- a/Bonuses/Cashback/index.html
+++ b/Bonuses/Cashback/index.html
@@ -597,7 +597,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit:1$</li>
+                  <li>Minimum Deposit: $1</li>
                   <li>Wagering: x40</li>
                 </ul>
               </div>
@@ -725,7 +725,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit:10$</li>
+                  <li>Minimum Deposit: $10</li>
                   <li>Wagering: x40</li>
                 </ul>
               </div>
@@ -855,7 +855,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit:30$</li>
+                  <li>Minimum Deposit:$30</li>
                   <li>Wagering: x35</li>
                 </ul>
               </div>
