--- a/Bonuses/First-Deposit/index.html
+++ b/Bonuses/First-Deposit/index.html
@@ -289,7 +289,7 @@
                 </div>
 
                 <div class="content-top">
-                  <p>Bonus up to 4500 € +275 FS</p>
+                  <p>Bonus up to 4500 € +275 Free spins</p>
                 </div>
 
                 <div class="top-bonus">
@@ -893,7 +893,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus up to 3 BTC / 90,000$ + 100 FS</p>
+                <p class="info">
+                  Welcome bonus up to 3 BTC / $90,000 + 100 Free Spins
+                </p>
               </div>
 
               <div class="buttons-bonus">
@@ -1164,7 +1166,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus 150% up to 1.5 BTC + 100FS</p>
+                <p class="info">
+                  Welcome bonus 150% up to 1.5 BTC + 100 Free Spins
+                </p>
               </div>
 
               <div class="buttons-bonus">
@@ -1252,7 +1256,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit:1$</li>
+                  <li>Minimum Deposit: $1</li>
                   <li>Wagering: x40</li>
                 </ul>
               </div>
@@ -1291,7 +1295,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonuses 150% up to 1000$ + 100 FS</p>
+                <p class="info">
+                  Welcome bonuses 150% up to $1000 + 100 Free Spins
+                </p>
               </div>
 
               <div class="buttons-bonus">
@@ -1636,7 +1642,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit:10$</li>
+                  <li>Minimum Deposit: $10</li>
                   <li>Wagering: x40</li>
                 </ul>
               </div>
@@ -1679,7 +1685,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">100% up to 500€ + 200 FS +1 Bonus Crab</p>
+                <p class="info">
+                  100% up to 500€ + 200 Free Spins +1 Bonus Crab
+                </p>
               </div>
 
               <div class="buttons-bonus">
@@ -1767,7 +1775,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit:30$</li>
+                  <li>Minimum Deposit:$30</li>
                   <li>Wagering: x35</li>
                 </ul>
               </div>
@@ -1804,7 +1812,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">5BTC + 250 FS Welcome bonus</p>
+                <p class="info">5BTC + 250 Free Spins Welcome bonus</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1930,7 +1938,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome Bonus 325% up to 5 BTC + 200 FS</p>
+                <p class="info">
+                  Welcome Bonus 325% up to 5 BTC + 200 Free Spins
+                </p>
               </div>
 
               <div class="buttons-bonus">
