--- a/Bonuses/No-Deposit/index.html
+++ b/Bonuses/No-Deposit/index.html
@@ -290,7 +290,7 @@
                 </div>
 
                 <div class="content-top">
-                  <p>100 FS</p>
+                  <p>100 Free Spins</p>
                 </div>
 
                 <div class="top-bonus">
