--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -20,7 +20,7 @@
 
     <meta
       name="description"
-      content="Spin your way to success with the top casinos packed with FS deals and generous WBs"
+      content="Spin your way to success with the top casinos packed with Free Spins deals and generous WBs"
     />
     <meta charset="UTF-8" />
 
@@ -245,7 +245,7 @@
             "@type": "Product",
             "name": "BC.GAME",
             "image": "https://www.all4wins.com/img/BC-Game.webp",
-            "description": "Top Odds Guaranteed, Seasonal Promotions, Welcome bonuses up to 100% + 20 FB",
+            "description": "Top Odds Guaranteed, Seasonal Promotions, Welcome bonuses up to 100% + 20 Free Bets",
             "offers": {
               "@type": "Offer",
               "url": "https://www.all4wins.com/Reviews-page/BC.Game/",
@@ -310,7 +310,7 @@
             "@type": "Product",
             "name": "DuelBits",
             "image": "https://www.all4wins.com/img/duelbits-small-banner.webp",
-            "description": "Crypto Friendly, High Betting Limits, Welcome bonus up to $100 FB",
+            "description": "Crypto Friendly, High Betting Limits, Welcome bonus up to $100 Free Bet",
             "offers": {
               "@type": "Offer",
               "url": "https://www.all4wins.com/Reviews-page/DuelBits/",
@@ -349,7 +349,7 @@
             "@type": "Product",
             "name": "TrustDice",
             "image": "https://www.all4wins.com/img/TrustDice-Logo.webp",
-            "description": "Free Bets & Promotions, Wide Sports Coverage, Risk Free Bet up to 100$",
+            "description": "Free Bets & Promotions, Wide Sports Coverage, Risk Free Bet up to $100",
             "offers": {
               "@type": "Offer",
               "url": "https://www.all4wins.com/Reviews-page/TrustDice/",
@@ -1843,7 +1843,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus up to 3000€ +900FS</p>
+                <p class="info">Welcome bonus up to 3000€ +900 Free Spins</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1977,7 +1977,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonuses 150% up to 1000$ + 100 FS</p>
+                <p class="info">
+                  Welcome bonuses 150% up to $1000 + 100 Free Spins
+                </p>
               </div>
 
               <div class="buttons-bonus">
@@ -2105,7 +2107,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome Bonus 325% up to 10800$ + 250 FS</p>
+                <p class="info">
+                  Welcome Bonus 325% up to $10800 + 250 Free spins
+                </p>
               </div>
 
               <div class="buttons-bonus">
@@ -2322,7 +2326,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit:10$</li>
+                  <li>Minimum Deposit: $10</li>
                   <li>Wagering: x40</li>
                 </ul>
               </div>
@@ -2361,7 +2365,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus 150% up to 1.5 BTC + 100FS</p>
+                <p class="info">
+                  Welcome bonus 150% up to 1.5 BTC + 100 Free Spins
+                </p>
               </div>
 
               <div class="buttons-bonus">
@@ -2449,7 +2455,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit:1$</li>
+                  <li>Minimum Deposit: $1</li>
                   <li>Wagering: x40</li>
                 </ul>
               </div>
@@ -2492,7 +2498,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus 100% up to 750$ +1 bonus crab</p>
+                <p class="info">Welcome bonus 100% up to $750 +1 bonus crab</p>
               </div>
 
               <div class="buttons-bonus">
@@ -2580,7 +2586,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit:30$</li>
+                  <li>Minimum Deposit:$30</li>
                   <li>Wagering: x35</li>
                 </ul>
               </div>
@@ -2753,7 +2759,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome Bonus 325% up to 5 BTC + 200 FS</p>
+                <p class="info">
+                  Welcome Bonus 325% up to 5 BTC + 200 Free Spins
+                </p>
               </div>
 
               <div class="buttons-bonus">
@@ -3018,7 +3026,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus up to 3 BTC / 90,000$ + 100 FS</p>
+                <p class="info">
+                  Welcome bonus up to 3 BTC / $90,000 + 100 Free Spins
+                </p>
               </div>
 
               <div class="buttons-bonus">
