--- a/Esports/index.html
+++ b/Esports/index.html
@@ -711,7 +711,7 @@
                   </div>
 
                   <div class="content-top">
-                    <p>Welcome bonuses 80% up to 1000$ + 5 FB</p>
+                    <p>Welcome bonuses 80% up to $1000 + 5 Free Bets</p>
                   </div>
 
                   <div class="top-bonus">
@@ -1136,7 +1136,7 @@
             <div class="casino-bonus">
               <div class="bonus-info">
                 <p class="info">
-                  First deposit 100% bonus up to 200$ in free bets
+                  First deposit 100% bonus up to $200 in free bets
                 </p>
               </div>
 
@@ -1450,7 +1450,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonuses 80% up to 1000$ + 5 FB</p>
+                <p class="info">
+                  Welcome bonuses 80% up to $1000 + 5 Free Bets
+                </p>
               </div>
 
               <div class="buttons-bonus">
@@ -2208,7 +2210,7 @@
                 <a href="https://wildpartners.app/a55d1e542"
                   ><em>Wild.io:</em></a
                 >
-                Offers a First deposit 100% bonus up to 200$ In free bets for
+                Offers a First deposit 100% bonus up to $200 In free bets for
                 new players when you sign up and deposit.
               </li>
 
