--- a/News-Articles/BC.Game-LoL-Worlds2024/index.html
+++ b/News-Articles/BC.Game-LoL-Worlds2024/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="/newx-demoGames.css" />
 
     <title>
-      BC.GAME: LoL World Championship 2024 Challenge|Freebets up tp 330$!
+      BC.GAME: LoL World Championship 2024 Challenge|Freebets up tp $330!
     </title>
 
     <script type="application/ld+json">
