--- a/News-Articles/GG.Bet-PGL-Wallachia-Season-2/index.html
+++ b/News-Articles/GG.Bet-PGL-Wallachia-Season-2/index.html
@@ -304,16 +304,16 @@
 
           <ul>
             <li>
-              <strong>100% Deposit Bonus up to 100$</strong> – For deposits
-              ranging from 100$ to 99$.
+              <strong>100% Deposit Bonus up to $100</strong> – For deposits
+              ranging from $100 to 99$.
             </li>
             <li>
-              <strong>150% Deposit Bonus up to 300$</strong> – For deposits
-              between 100$ and 249$.
+              <strong>150% Deposit Bonus up to $300</strong> – For deposits
+              between $100 and $249.
             </li>
             <li>
-              <strong>200% Deposit Bonus up to 700$</strong> – For deposits of
-              250$ or more.
+              <strong>200% Deposit Bonus up to $700</strong> – For deposits of
+              $250 or more.
             </li>
           </ul>
 
