--- a/News-Articles/Roobet’s-Latest-Sportsbook-Promos/index.html
+++ b/News-Articles/Roobet’s-Latest-Sportsbook-Promos/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="/newx-demoGames.css" />
 
     <title>
-      Roobet Promotion - Latest Sportsbook Promotion! Get 100$ Free Bets Now!
+      Roobet Promotion - Latest Sportsbook Promotion! Get $100 Free Bets Now!
     </title>
     <script type="application/ld+json">
       {
