--- a/News-Articles/TrustDice-Spooktacular-100-FS/index.html
+++ b/News-Articles/TrustDice-Spooktacular-100-FS/index.html
@@ -266,7 +266,7 @@
     <div id="breadcrumbs" class="breadcrumbs">
       <a href="/">Home</a><span>&gt;</span
       ><a href="https://www.all4wins.com/News/">News</a><span>&gt;</span
-      ><span>TrustDice Spooktacular 100 FS</span>
+      ><span>TrustDice Spooktacular 100 Free Spins</span>
     </div>
     <!-- 
 
