--- a/Reviews-page/7Bit-Casino/index.html
+++ b/Reviews-page/7Bit-Casino/index.html
@@ -30,7 +30,9 @@
 
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
 
-    <title>7Bit Casino Review 2025: WB 325% up to 10800 CAD + 250 FS!</title>
+    <title>
+      7Bit Casino Review 2025: WB 325% up to 10800 CAD + 250 Free Spins!
+    </title>
     <!-- breadcrumbs -->
     <script type="application/ld+json">
       {
@@ -307,7 +309,7 @@
           Let’s dive into what 7Bit Casino has in store for you!
         </p>
 
-        <h2>Welcome Bonus: 325% up to 10800 CAD + 250 FS</h2>
+        <h2>Welcome Bonus: 325% up to 10800 CAD + 250 Free Spins</h2>
         <div class="review-img">
           <img
             src="/img/news-banners/7bit-new-wb.webp"
@@ -318,10 +320,12 @@
 
         <h2>1. First Deposit Bonus</h2>
         <ul>
-          <li><strong>Offer:</strong> 100% match up to 800 CAD + 100 FS</li>
+          <li>
+            <strong>Offer:</strong> 100% match up to 800 CAD + 100 Free Spins
+          </li>
           <li><strong>Game:</strong> Elvis Frog in Vegas</li>
           <li><strong>Minimum Deposit:</strong> 40 CAD</li>
-          <li><strong>Max Win from FS:</strong> 200 CAD</li>
+          <li><strong>Max Win from Free Spins:</strong> 200 CAD</li>
           <li><strong>Wagering Requirement:</strong> 35x</li>
           <li><strong>Max Bet:</strong> 2 CAD</li>
         </ul>
@@ -341,13 +345,15 @@
 
         <h2>2. Second Deposit Bonus</h2>
         <ul>
-          <li><strong>Offer:</strong> 75% match up to 1,200 CAD + 100 FS</li>
+          <li>
+            <strong>Offer:</strong> 75% match up to 1,200 CAD + 100 Free Spins
+          </li>
           <li><strong>Game:</strong> Dig Dig Digger</li>
           <li>
             <strong>Minimum Deposit:</strong> 40 CAD (Use code
             <strong>2DEP</strong> before deposit)
           </li>
-          <li><strong>Max Win from FS:</strong> 200 CAD</li>
+          <li><strong>Max Win from Free Spins:</strong> 200 CAD</li>
           <li><strong>Wagering Requirement:</strong> 35x</li>
           <li><strong>Max Bet:</strong> 2 CAD</li>
         </ul>
@@ -391,13 +397,15 @@
 
         <h2>4. Fourth Deposit Bonus</h2>
         <ul>
-          <li><strong>Offer:</strong> 100% match up to 8,000 CAD + 50 FS</li>
+          <li>
+            <strong>Offer:</strong> 100% match up to 8,000 CAD + 50 Free Spins
+          </li>
           <li><strong>Game:</strong> Wild Cash x9990</li>
           <li>
             <strong>Minimum Deposit:</strong> 40 CAD (Use code
             <strong>4DEP</strong> before deposit)
           </li>
-          <li><strong>Max Win from FS:</strong> 200 CAD</li>
+          <li><strong>Max Win from Free Spins:</strong> 200 CAD</li>
           <li><strong>Wagering Requirement:</strong> 35x</li>
           <li><strong>Max Bet:</strong> 2 CAD</li>
         </ul>
@@ -498,7 +506,7 @@
         <p><strong>Match Amount:</strong> 25% up to 1000 CAD</p>
         <p><strong>Game:</strong> Slotcade</p>
         <p><strong>Min Deposit:</strong> 100 CAD</p>
-        <p><strong>Max Win (FS):</strong> 1000 CAD</p>
+        <p><strong>Max Win (Free Spins):</strong> 1000 CAD</p>
         <p><strong>Wager:</strong> x35</p>
         <p><strong>Max Bet:</strong> 10 CAD</p>
         <p><strong>Additional Terms:</strong></p>
@@ -519,7 +527,10 @@
         </ul>
 
         <h2>Wednesday Bonus</h2>
-        <p><strong>Bonus Options:</strong> 35 FS, 75 FS, or 100 FS</p>
+        <p>
+          <strong>Bonus Options:</strong> 35 Free Spins, 75 Free Spins, or 100
+          Free Spins
+        </p>
         <div class="review-img">
           <img
             src="/img/news-banners/7bit-wednesday-bonus.webp"
@@ -682,7 +693,7 @@
             <ul>
               <li>
                 <strong>Offer:</strong> 325% bonus up to 10,800 CAD + 250 Free
-                Spins (FS).
+                Spins.
               </li>
               <div class="review-img">
                 <img
@@ -696,10 +707,10 @@
                 <ul>
                   <li>
                     <strong>First Deposit:</strong> 100% match up to 800 CAD +
-                    100 FS on <em>Elvis Frog in Vegas</em>.
+                    100 Free Spins on <em>Elvis Frog in Vegas</em>.
                     <ul>
                       <li><strong>Minimum Deposit:</strong> 40 CAD</li>
-                      <li><strong>Max Win from FS:</strong> 200 CAD</li>
+                      <li><strong>Max Win from Free Spins:</strong> 200 CAD</li>
                       <li><strong>Wagering Requirement:</strong> 35x</li>
                       <li><strong>Free Spins Expiry:</strong> 1 day</li>
                       <li class="review-img">
@@ -713,7 +724,7 @@
                   </li>
                   <li>
                     <strong>Second Deposit:</strong> 75% match up to 1,200 CAD +
-                    100 FS on <em>Dig Dig Digger</em>.
+                    100 Free Spins on <em>Dig Dig Digger</em>.
                     <ul>
                       <li><strong>Use Code:</strong> 2DEP</li>
                       <li class="review-img">
@@ -740,7 +751,7 @@
                   </li>
                   <li>
                     <strong>Fourth Deposit:</strong> 100% match up to 8,000 CAD
-                    + 50 FS on <em>Wild Cash x9990</em>.
+                    + 50 Free Spins on <em>Wild Cash x9990</em>.
                     <ul>
                       <li><strong>Use Code:</strong> 4DEP</li>
                       <li class="review-img">
@@ -799,7 +810,7 @@
               </li>
               <li>
                 <strong>Wednesday Bonus:</strong> Free Spins options (35, 75, or
-                100 FS on <em>Penny Pelican</em>).
+                100 Free Spins on <em>Penny Pelican</em>).
               </li>
               <li>
                 <strong>Telegram Bonus:</strong> 50 Free Spins on
