--- a/Reviews-page/BC.Game/index.html
+++ b/Reviews-page/BC.Game/index.html
@@ -29,7 +29,8 @@
     />
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
     <title>
-      BC Game Casino Review 2025: Crypto Casino with 100% WB, 400FS and more!
+      BC Game Casino Review 2025: Crypto Casino with 100% WB, 400 Free Spins and
+      more!
     </title>
     <!-- breadcrumbs -->
     <script type="application/ld+json">
@@ -325,7 +326,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Casino bonus</p>
-                <p>Welcome bonuses 150% up to 1000$ + 100 FS</p>
+                <p>Welcome bonuses 150% up to $1000 + 100 Free Spins</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -351,7 +352,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">ESports bonus</p>
-                <p>Welcome bonuses 80% up to 1000$ + 5 FB</p>
+                <p>Welcome bonuses 80% up to $1000 + 5 Free Bets</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -377,7 +378,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Sports bonus</p>
-                <p>Welcome bonuses 80% up to 1000$ + 5 FB</p>
+                <p>Welcome bonuses 80% up to $1000 + 5 Free Bets</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -500,7 +501,8 @@
             </ul>
           </li>
           <li>
-            Free Spin Winnings Cap: Max withdrawal from FS winnings is $5.
+            Free Spin Winnings Cap: Max withdrawal from Free Spins winnings is
+            $5.
           </li>
           <li>Max Unlockable from Bonus: Up to 200% of the bonus amount.</li>
         </ul>
@@ -579,7 +581,7 @@
           </div>
           <div class="overview-button">
             <p>Minimum Deposit</p>
-            <p>20$</p>
+            <p>$20</p>
           </div>
           <div class="overview-button">
             <p>Withdrawal Limit</p>
