--- a/Reviews-page/BetFury/index.html
+++ b/Reviews-page/BetFury/index.html
@@ -31,7 +31,8 @@
 
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
     <title>
-      Betfury Casino Review 2025:Crypto Casino With 590% WB, 225 FS and more!
+      Betfury Casino Review 2025:Crypto Casino With 590% WB, 225 Free Spins and
+      more!
     </title>
     <script type="application/ld+json">
       {
