--- a/Reviews-page/DuelBits/index.html
+++ b/Reviews-page/DuelBits/index.html
@@ -374,7 +374,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Sports bonus</p>
-                <p>Welcome bonus 100$ FB</p>
+                <p>Welcome bonus $100 Free Bets</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -395,9 +395,9 @@
         <h2>Welcome Bonus</h2>
         <p>
           New players at Duelbits can kick off their gaming journey with a
-          <strong>50% reekback</strong> and <strong>$100 FB</strong>. This
-          generous welcome offer is designed to give you a solid start, allowing
-          you to explore various games without breaking the bank.
+          <strong>50% reekback</strong> and <strong>$100 Free Bets</strong>.
+          This generous welcome offer is designed to give you a solid start,
+          allowing you to explore various games without breaking the bank.
         </p>
         <div class="review-img">
           <img
