--- a/Reviews-page/GG.Bet/index.html
+++ b/Reviews-page/GG.Bet/index.html
@@ -325,7 +325,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Casino bonus</p>
-                <p>Bonus up to 3000€ +900 FS</p>
+                <p>Bonus up to 3000€ +900 Free Spins</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -590,16 +590,17 @@
         <ul>
           <li>Up to 500 EUR and 60 free spins</li>
           <li>
-            <strong>Option 1:</strong> 1 deposit from €10 - 125% bonus + 40 FS
-            (3x3 Hold the Spin, Gamzix) - Max bonus: $250
+            <strong>Option 1:</strong> 1 deposit from €10 - 125% bonus + 40 Free
+            Spins (3x3 Hold the Spin, Gamzix) - Max bonus: $250
           </li>
           <li>
             <strong>Option 2:</strong> 3 deposits from €10 - Average deposit
-            amount bonus + 50 FS (Majestic King, Spinomenal) - Max bonus: $400
+            amount bonus + 50 Free Spins (Majestic King, Spinomenal) - Max
+            bonus: $400
           </li>
           <li>
-            <strong>Option 3:</strong> 5 deposits from €10 - 100% bonus + 60 FS
-            (Sugar Rush 1000, PragmaticPlay) - Max bonus: $700
+            <strong>Option 3:</strong> 5 deposits from €10 - 100% bonus + 60
+            Free Spins (Sugar Rush 1000, PragmaticPlay) - Max bonus: $700
           </li>
         </ul>
 
@@ -611,12 +612,12 @@
           <li>Deposit between 00:00 (UTC) Saturday and 23:59 (UTC) Sunday.</li>
           <li>Each deposit must be at least $13.</li>
           <li>
-            Option 2: 3 deposits qualify for the average bonus + 50 FS (Majestic
-            King).
+            Option 2: 3 deposits qualify for the average bonus + 50 Free Spins
+            (Majestic King).
           </li>
           <li>
-            Option 3: 5 deposits qualify for 100% bonus + 60 FS (Sugar Rush
-            1000).
+            Option 3: 5 deposits qualify for 100% bonus + 60 Free Spins (Sugar
+            Rush 1000).
           </li>
           <li>Wagering: x40/55 for cash bonuses, x30 for free spins.</li>
           <li>Unredeemed bonuses expire in 5/2 days.</li>
@@ -686,7 +687,7 @@
           </div>
           <div class="overview-button">
             <p>Minimum Deposit</p>
-            <p>1$</p>
+            <p>$1</p>
           </div>
           <div class="overview-button">
             <p>Withdrawal Limit</p>
@@ -954,16 +955,16 @@
               <li>Up to 500 EUR and 60 free spins</li>
               <li>
                 <strong>Option 1:</strong> 1 deposit from €10 - 125% bonus + 40
-                FS (3x3 Hold the Spin, Gamzix) - Max bonus: $250
+                Free Spins (3x3 Hold the Spin, Gamzix) - Max bonus: $250
               </li>
               <li>
                 <strong>Option 2:</strong> 3 deposits from €10 - Average deposit
-                amount bonus + 50 FS (Majestic King, Spinomenal) - Max bonus:
-                $400
+                amount bonus + 50 Free Spins (Majestic King, Spinomenal) - Max
+                bonus: $400
               </li>
               <li>
                 <strong>Option 3:</strong> 5 deposits from €10 - 100% bonus + 60
-                FS (Sugar Rush 1000, PragmaticPlay) - Max bonus: $700
+                Free Spins (Sugar Rush 1000, PragmaticPlay) - Max bonus: $700
               </li>
             </ul>
 
@@ -978,12 +979,12 @@
               </li>
               <li>Each deposit must be at least $13.</li>
               <li>
-                Option 2: 3 deposits qualify for the average bonus + 50 FS
-                (Majestic King).
+                Option 2: 3 deposits qualify for the average bonus + 50 Free
+                Spins (Majestic King).
               </li>
               <li>
-                Option 3: 5 deposits qualify for 100% bonus + 60 FS (Sugar Rush
-                1000).
+                Option 3: 5 deposits qualify for 100% bonus + 60 Free Spins
+                (Sugar Rush 1000).
               </li>
               <li>Wagering: x40/55 for cash bonuses, x30 for free spins.</li>
               <li>Unredeemed bonuses expire in 5/2 days.</li>
