--- a/Reviews-page/Katsubet/index.html
+++ b/Reviews-page/Katsubet/index.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
 
     <title>
-      KatsuBet Casino Review 2025:WB 325% up to 5 BTC + 200 FS and more
+      KatsuBet Casino Review 2025:WB 325% up to 5 BTC + 200 Free Spins and more
     </title>
     <!-- breadcrumbs -->
     <script type="application/ld+json">
@@ -372,7 +372,7 @@
           </li>
           <li>
             <strong>Weekly KatsuBattle</strong>: Prize pool of 0.015 BTC, 500
-            FS, and 5000 Comp points every 7 days.
+            Free Spins, and 5000 Comp points every 7 days.
           </li>
           <li>
             <strong>Span New Games Tournament</strong>: Weekly prize pool of
@@ -443,11 +443,15 @@
           </li>
           <ul>
             <li>
-              <strong>Jade Talisman</strong>: 5 BTC + 200 FS (100 KP = 0.00003
-              BTC).
+              <strong>Jade Talisman</strong>: 5 BTC + 200 Free Spins (100 KP =
+              0.00003 BTC).
             </li>
-            <li><strong>Suneate</strong>: 25 FS (100 KP = 0.00006 BTC).</li>
-            <li><strong>Kote</strong>: 50 FS (100 KP = 0.00009 BTC).</li>
+            <li>
+              <strong>Suneate</strong>: 25 Free Spins (100 KP = 0.00006 BTC).
+            </li>
+            <li>
+              <strong>Kote</strong>: 50 Free Spins (100 KP = 0.00009 BTC).
+            </li>
             <li>
               <strong>Katana</strong>: 50,000 points = 0.0077 BTC (100 KP =
               0.0002 BTC).
