--- a/Reviews-page/Rabona/index.html
+++ b/Reviews-page/Rabona/index.html
@@ -783,7 +783,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Casino bonus</p>
-                <p>Welcome bonus 100% up to 750$ +1 bonus crab</p>
+                <p>Welcome bonus 100% up to $750 +1 bonus crab</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
