--- a/Reviews-page/TrustDice/index.html
+++ b/Reviews-page/TrustDice/index.html
@@ -28,7 +28,9 @@
       href="https://www.all4wins.com/Reviews-page/TrustDice/"
     />
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
-    <title>TrustDice Casino Review 2025: WB 3 BTC + 25 FS and more!</title>
+    <title>
+      TrustDice Casino Review 2025: WB 3 BTC + 25 Free Spins and more!
+    </title>
     <!-- breadcrumbs -->
     <script type="application/ld+json">
       {
@@ -695,7 +697,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Casino bonus</p>
-                <p>Welcome bonus up to 3 BTC / 90,000$ + 100 FS</p>
+                <p>Welcome bonus up to 3 BTC / $90,000 + 100 Free Spins</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -744,7 +746,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Sports bonus</p>
-                <p>Risk Free Bet up to 100$</p>
+                <p>Risk Free Bet up to $100</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
