--- a/Reviews-page/Vave/index.html
+++ b/Reviews-page/Vave/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
 
     <title>
-      Vave Casino Review 2025: WB 150% up to 1.5 BTC + 100FS and more!
+      Vave Casino Review 2025: WB 150% up to 1.5 BTC + 100Free Spins and more!
     </title>
 
     <script type="application/ld+json">
@@ -312,7 +312,7 @@
           </div>
           <div class="overview-button">
             <p>Minimum Deposit</p>
-            <p>1$</p>
+            <p>$1</p>
           </div>
           <div class="overview-button">
             <p>Withdrawal Limit</p>
@@ -635,7 +635,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Casino bonus</p>
-                <p>5BTC + 250 FS Welcome bonus</p>
+                <p>5BTC + 250 Free Spins Welcome bonus</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
