--- a/Reviews-page/Wazamba/index.html
+++ b/Reviews-page/Wazamba/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
 
     <title>
-      Wazamba Casino Review 2025: WB 100% up to 750$ +1 bonus crab and more!
+      Wazamba Casino Review 2025: WB 100% up to $750 +1 bonus crab and more!
     </title>
 
     <script type="application/ld+json">
@@ -317,11 +317,11 @@
           </div>
           <div class="overview-button">
             <p>Minimum Deposit</p>
-            <p>30$</p>
+            <p>$30</p>
           </div>
           <div class="overview-button">
             <p>Withdrawal Limit</p>
-            <p>15,000$per month</p>
+            <p>$15,000per month</p>
           </div>
 
           <div class="overview-button" id="card-tipe-container">
@@ -762,7 +762,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Casino bonus</p>
-                <p>Welcome bonus 100% up to 750$ +1 bonus crab</p>
+                <p>Welcome bonus 100% up to $750 +1 bonus crab</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
