--- a/Reviews-page/Wild.io/index.html
+++ b/Reviews-page/Wild.io/index.html
@@ -30,7 +30,9 @@
 
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
 
-    <title>Wild io Casino Review 2025 - WB 350% + 200 FS and more!</title>
+    <title>
+      Wild io Casino Review 2025 - WB 350% + 200 Free Spins and more!
+    </title>
 
     <script type="application/ld+json">
       {
@@ -319,7 +321,7 @@
           </div>
           <div class="overview-button">
             <p>Withdrawal Limit</p>
-            <p>15,000$ per month</p>
+            <p>$15,000 per month</p>
           </div>
 
           <div class="overview-button" id="card-tipe-container">
@@ -546,7 +548,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">ESports bonus</p>
-                <p>First deposit 100% bonus up to 200$ In free bets</p>
+                <p>First deposit 100% bonus up to $200 In free bets</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -572,7 +574,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Sports bonus</p>
-                <p>First deposit 100% bonus up to 200$ In free bets</p>
+                <p>First deposit 100% bonus up to $200 In free bets</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
