--- a/Sports/index.html
+++ b/Sports/index.html
@@ -753,7 +753,7 @@
                     <div class="news-content">
                       <h2>
                         All Sports Bonuses at BetFury: <br />
-                        Cashback-25%, Weekly Sport Bonus up to 12,000$, and
+                        Cashback-25%, Weekly Sport Bonus up to $12,000, and
                         more!
                       </h2>
                       <div class="news-button">
@@ -862,7 +862,7 @@
                   </div>
 
                   <div class="content-top">
-                    <p>First deposit 100% bonus up to 200$ in free bets</p>
+                    <p>First deposit 100% bonus up to $200 in free bets</p>
                   </div>
 
                   <div class="top-bonus">
@@ -1193,7 +1193,7 @@
             <div class="casino-bonus">
               <div class="bonus-info">
                 <p class="info">
-                  First deposit 100% bonus up to 200$ in free bets
+                  First deposit 100% bonus up to $200 in free bets
                 </p>
               </div>
 
@@ -1606,7 +1606,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonuses 80% up to 1000$ + 5 FB</p>
+                <p class="info">
+                  Welcome bonuses 80% up to $1000 + 5 Free Bets
+                </p>
               </div>
 
               <div class="buttons-bonus">
@@ -1740,7 +1742,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus up to 100$ FB</p>
+                <p class="info">Welcome bonus up to $100 Free Bet</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1971,7 +1973,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit:1$</li>
+                  <li>Minimum Deposit: $1</li>
                   <li>Wagering: x40</li>
                 </ul>
               </div>
@@ -2249,7 +2251,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit:10$</li>
+                  <li>Minimum Deposit: $10</li>
                   <li>Wagering: x40</li>
                 </ul>
               </div>
@@ -2385,7 +2387,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit:30$</li>
+                  <li>Minimum Deposit:$30</li>
                   <li>Wagering: x35</li>
                 </ul>
               </div>
@@ -2428,7 +2430,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Risk Free Bet up to 100$</p>
+                <p class="info">Risk Free Bet up to $100</p>
               </div>
 
               <div class="buttons-bonus">
@@ -2723,7 +2725,7 @@
                 <a href="https://wildpartners.app/a55d1e542"
                   ><em>Wild.io:</em></a
                 >
-                Offers a First deposit 100% bonus up to 200$ In free bets for
+                Offers a First deposit 100% bonus up to $200 In free bets for
                 new players when you sign up and deposit.
               </li>
 
