--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <link rel="stylesheet" href="app.css" />
 
     <title>
-      All4Wins: Top Casino, Sports & Esports Betting FS, FB Offers and Generous
-      WB!
+      All4Wins: Top Casino, Sports & Esports Betting Free Spins, Free Bet
+      Offers!
     </title>
 
     <!-- JSON-LD for All4Wins Homepage -->
@@ -1598,7 +1598,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus up to 3000€ +900FS</p>
+                <p class="info">Welcome bonus up to 3000€ +900Free Spins</p>
               </div>
 
               <div class="buttons-bonus">
@@ -1732,7 +1732,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus 150% up to 1.5 BTC + 100FS</p>
+                <p class="info">
+                  Welcome bonus 150% up to 1.5 BTC + 100 Free Spins
+                </p>
               </div>
 
               <div class="buttons-bonus">
@@ -1820,7 +1822,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit:1$</li>
+                  <li>Minimum Deposit: $1</li>
                   <li>Wagering: x40</li>
                 </ul>
               </div>
@@ -1862,7 +1864,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonuses 150% up to 1000$ + 100 FS</p>
+                <p class="info">
+                  Welcome bonuses 150% up to $1000 + 100 Free Spins
+                </p>
               </div>
 
               <div class="buttons-bonus">
@@ -2341,7 +2345,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit:1$</li>
+                  <li>Minimum Deposit: $1</li>
                   <li>Wagering: x40</li>
                 </ul>
               </div>
@@ -2383,7 +2387,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus 100% up to 750$ +1 bonus crab</p>
+                <p class="info">Welcome bonus 100% up to $750 +1 bonus crab</p>
               </div>
 
               <div class="buttons-bonus">
@@ -2471,7 +2475,7 @@
               <div class="bonus-terms">
                 <h2>Bonus Terms & Conditions</h2>
                 <ul>
-                  <li>Minimum Deposit:30$</li>
+                  <li>Minimum Deposit:$30</li>
                   <li>Wagering: x35</li>
                 </ul>
               </div>
@@ -2511,7 +2515,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome Bonus 325% up to 10800$ + 250 FS</p>
+                <p class="info">
+                  Welcome Bonus 325% up to $10800 + 250 Free spins
+                </p>
               </div>
 
               <div class="buttons-bonus">
@@ -2646,7 +2652,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome Bonus 325% up to 5 BTC + 200 FS</p>
+                <p class="info">
+                  Welcome Bonus 325% up to 5 BTC + 200 Free Spins
+                </p>
               </div>
 
               <div class="buttons-bonus">
@@ -2778,7 +2786,9 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome bonus up to 3 BTC / 90,000$ + 100 FS</p>
+                <p class="info">
+                  Welcome bonus up to 3 BTC / $90,000 + 100 Free Spins
+                </p>
               </div>
 
               <div class="buttons-bonus">
