--- a/News-Articles/GGBet-League-Of-Legends-200-Bonus/index.html
+++ b/News-Articles/GGBet-League-Of-Legends-200-Bonus/index.html
@@ -264,7 +264,7 @@
     <div id="breadcrumbs" class="breadcrumbs">
       <a href="/">Home</a><span>&gt;</span
       ><a href="https://www.all4wins.com/News/">News</a><span>&gt;</span
-      ><span>GGBet League of Legends 200$ bonus</span>
+      ><span>GGBet League of Legends $200 bonus</span>
     </div>
     <!-- 
 
