--- a/Reviews-page/Roobet/index.html
+++ b/Reviews-page/Roobet/index.html
@@ -29,7 +29,7 @@
     />
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
     <title>
-      Roobet Casino Review 2025: Welcome Bonus 20% Cashback up to 1400$!
+      Roobet Casino Review 2025: Welcome Bonus 20% Cashback up to $1400!
     </title>
     <!-- breadcrumbs -->
     <script type="application/ld+json">
